# semi-project

backend/: .env  pyproject.toml
backend/app/: .env  .gitignore  auth.py  crud.py  database.py  main.py  pyproject.toml  utils.py
backend/app/api/endpoints/: categories.py  products.py  upload.py  users.py
backend/app/database/: .env  database.py
backend/app/models/: category.py  category_model.py  product.py  product_model.py  user.py  user_model.py
backend/app/routers/: categories.py  products.py  users.py
backend/app/schemas/: category.py  category_schema.py  product.py  product_schema.py  user.py  user_schema.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/layout/: CatNav.jsx  Header.jsx
frontend/src/components/layout/myinfo/: MySellSection.jsx  UserProfileSection.jsx  WishlistSection.jsx
frontend/src/components/myinfo/: MySellSection.jsx  WishlistSection.jsx
frontend/src/data/: sampleProducts.js
frontend/src/features/products/components/: ProductItem.jsx  ProductList.jsx
frontend/src/pages/: EditProfile.jsx  EditProfile2.jsx  HomePage.jsx  LoginPage.jsx  MyInfoPage.jsx  ProductDetailPage.jsx  ProductEditPage.jsx  SearchResultPage.jsx  SellPage.jsx  SignUpPage.jsx
frontend/src/styles/: App.css  CatNav.css  EditProfile.css  EditProfile2.css  Header.css  HomePage.css  Login.css  LoginPage.css  MyInfoPage.css  MyInfoSections.css  ProductDetailPage.css  ProductItem.css  ProductList.css  SellPage.css  UserProfileSection.css
